--- a/.github/workflows/php-security.yml
+++ b/.github/workflows/php-security.yml
@@ -1,13 +1,15 @@
 name: Check for dangerous functions
   run: |
     echo "Checking for potentially dangerous PHP functions..."
-    if grep -rE '\b(eval|system|shell_exec|proc_open|popen)\s*\(' src/ --exclude-dir=vendor | grep -v 'ffmpeg' | grep -v 'video_process'; then
+    DANGEROUS=$(grep -rnE '\b(eval|exec|system|shell_exec|proc_open|popen)\s*\(' src/ --exclude-dir=vendor | grep -v 'ffmpeg' | grep -v 'video_process' | grep -v 'PATHTOFILES')
+    if [ -n "$DANGEROUS" ]; then
       echo "❌ Found dangerous function usage"
-      grep -rn -E '\b(eval|system|shell_exec|proc_open|popen)\s*\(' src/ --exclude-dir=vendor | grep -v 'ffmpeg' | grep -v 'video_process'
+      echo "$DANGEROUS"
       exit 1
     fi
-    if grep -rE '\bpassthru\s*\(' src/ --exclude-dir=vendor | grep -v 'fpassthru'; then
+    if PASSTHRU=$(grep -rnE '\bpassthru\s*\(' src/ --exclude-dir=vendor | grep -v 'fpassthru'); [ -n "$PASSTHRU" ]; then
       echo "❌ Found passthru() usage (not fpassthru)"
+      echo "$PASSTHRU"
       exit 1
     fi
     echo "✅ No dangerous functions found"
