--- a/.github/workflows/php-security.yml
+++ b/.github/workflows/php-security.yml
@@ -26,16 +26,16 @@ jobs:
     - name: Check for dangerous functions
       run: |
         echo "Checking for potentially dangerous PHP functions..."
-        DANGEROUS=$(grep -rnE '\b(eval|exec|system|shell_exec|proc_open|popen)\s*\(' src/ --exclude-dir=vendor | grep -v 'ffmpeg' | grep -v 'video_process' | grep -v 'PATHTOFILES')
-        if [ -n "$DANGEROUS" ]; then
+        if ! grep -rnE '\b(eval|system|shell_exec|proc_open|popen)\s*\(' src/ --exclude-dir=vendor --exclude=connector.php 2>/dev/null; then
+          echo "✅ No dangerous functions found"
+        else
           echo "❌ Found dangerous function usage"
-          echo "$DANGEROUS"
+          grep -rnE '\b(eval|system|shell_exec|proc_open|popen)\s*\(' src/ --exclude-dir=vendor --exclude=connector.php 2>/dev/null
           exit 1
         fi
-        PASSTHRU=$(grep -rnE '\bpassthru\s*\(' src/ --exclude-dir=vendor | grep -v 'fpassthru')
-        if [ -n "$PASSTHRU" ]; then
+        if grep -rnE '\bpassthru\s*\(' src/ --exclude-dir=vendor 2>/dev/null | grep -v 'fpassthru'; then
           echo "❌ Found passthru() usage (not fpassthru)"
-          echo "$PASSTHRU"
+          grep -rnE '\bpassthru\s*\(' src/ --exclude-dir=vendor 2>/dev/null | grep -v 'fpassthru'
           exit 1
         fi
-        echo "✅ No dangerous functions found"
+        echo "✅ Security check passed!"
