--- a/.github/workflows/php-security.yml
+++ b/.github/workflows/php-security.yml
@@ -26,16 +26,16 @@ jobs:
     - name: Check for dangerous functions
       run: |
         echo "Checking for potentially dangerous PHP functions..."
-        DANGEROUS=$(grep -rnE '\b(eval|system|shell_exec|proc_open|popen)\s*\(' src/ --exclude-dir=vendor --exclude=connector.php 2>/dev/null || true)
-        if [ -n "$DANGEROUS" ]; then
+        DANGEROUS_LINES=$(grep -rnE '\b(eval|system|shell_exec|proc_open|popen)\s*\(' src/ --exclude-dir=vendor 2>/dev/null | grep -v 'connector.php' || true)
+        if [ -n "$DANGEROUS_LINES" ]; then
           echo "❌ Found dangerous function usage"
-          echo "$DANGEROUS"
+          echo "$DANGEROUS_LINES"
           exit 1
         fi
-        PASSTHRU=$(grep -rnE '\bpassthru\s*\(' src/ --exclude-dir=vendor --exclude=connector.php 2>/dev/null | grep -v 'fpassthru' || true)
-        if [ -n "$PASSTHRU" ]; then
+        PASSTHRU_LINES=$(grep -rnE '\bpassthru\s*\(' src/ --exclude-dir=vendor 2>/dev/null | grep -v 'fpassthru' || true)
+        if [ -n "$PASSTHRU_LINES" ]; then
           echo "❌ Found passthru() usage (not fpassthru)"
-          echo "$PASSTHRU"
+          echo "$PASSTHRU_LINES"
           exit 1
         fi
         echo "✅ No dangerous functions found"
