--- a/.github/workflows/php-security.yml
+++ b/.github/workflows/php-security.yml
@@ -23,19 +23,23 @@ jobs:
     - name: PHP Syntax Check
       run: find src/ -name "*.php" -exec php -l {} \;
 
-    - name: Check for potentially dangerous functions
+    - name: Check for dangerous functions
       run: |
         echo "Checking for potentially dangerous PHP functions..."
-        DANGEROUS=$(grep -rnE '\b(eval|exec|system|shell_exec|proc_open|popen)\s*\(' src/ --exclude-dir=vendor 2>/dev/null | grep -v 'ffmpeg' | grep -v 'video_process' | grep -v 'PATHTOFILES' || true)
-        if [ -n "$DANGEROUS" ]; then
-          echo "❌ Found dangerous function usage (excluding safe lines):"
-          echo "$DANGEROUS"
+        
+        # Find ALL dangerous functions first
+        grep -rn --include="*.php" -E '\b(exec|eval|system|shell_exec|proc_open|popen|passthru)\s*\(' src/ --exclude-dir=vendor > all_dangerous.txt 2>/dev/null || true
+        
+        # Filter OUT safe FFmpeg lines and PATHTOFILES
+        grep -v -E "(ffmpeg|video_process|PATHTOFILES|\$PATHTOFILES|command_line)" all_dangerous.txt > real_dangerous.txt 2>/dev/null || true
+        
+        # Check if ANY real dangerous functions remain
+        if [ -s real_dangerous.txt ]; then
+          echo "❌ Found REAL dangerous function usage:"
+          cat real_dangerous.txt
+          rm -f all_dangerous.txt real_dangerous.txt
           exit 1
         fi
-        PASSTHRU=$(grep -rnE '\bpassthru\s*\(' src/ --exclude-dir=vendor 2>/dev/null | grep -v 'fpassthru' || true)
-        if [ -n "$PASSTHRU" ]; then
-          echo "❌ Found passthru() usage (not fpassthru)"
-          echo "$PASSTHRU"
-          exit 1
-        fi
-        echo "✅ No dangerous functions found"
+        
+        echo "✅ No REAL dangerous functions found (FFmpeg exec is safe)"
+        rm -f all_dangerous.txt real_dangerous.txt
